# cvxopt

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CNAME  INSTALL  LICENSE  MANIFEST.in  README.md  copyright.html  index.html  objects.inv  params.json  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.ci-support/: before_all_linux.sh  before_all_macos.sh  before_all_windows.bat  config_glpk.bat  config_openblas.bat  config_suitesparse_src.bat
.github/workflows/: _add_bootstrap.py  build_publish_linux.yml  build_publish_macos.yml  build_publish_source.yml  build_publish_windows.yml  dsdp.patch  linux_build.yml  macos_build.yml  release.yml  windows_build.yml  windows_build_mvsc.yml
_downloads/: basispursuit.py  chernoff.py  floorplan.py  l1.py  l1_mosek6.py  l1regls.py  logreg.py  maxent.py  mnist.py  placement.py  probbounds.py  ubsdp.py
_downloads/4263de3faa286c5f6467fe58256134ef/: sprandmtrx.py
_downloads/4318893c40f0a807ee7aae69d23de2f7/: huber.py
_downloads/44521cc1343cb2e8365225fda17970c1/: l1_mosek7.py
_downloads/47ea946c2737b6243ed47275097fc816/: tv.py
_downloads/5f7e2335ac607d46501c51931ca4a8da/: centers.py
_downloads/6ca4a78feb28f9efbb5e4bc4337d835f/: ellipsoids.py
_downloads/9280b7f7a3e93dc7dbc651fb88a6eddf/: rls.py
_downloads/959985f7a274f2f29998baf5f3de67f7/: mcsvm.py
_downloads/a0240b918b8f79ed6134a58f39ad9e46/: smoothrec.py
_downloads/a73a8eed2086eb99c6bef0dac33459de/: cvxfit.py
_downloads/ad5823961411da4165f3d7cb85b21f2c/: polapprox.py
_downloads/b29be34dac526534a286fa7aed925960/: consumerpref.py
_downloads/c85481ca9c63e8f47fc000a08da93766/: l1regls_mosek6.py
_downloads/cdb600339417e24c5ec0efebdda3dc0c/: matfile.py
_downloads/d69ceac6463de6e4146ad32d11708d99/: penalties.py
_downloads/dcf8e07bee53213cc48e8418ad9a582a/: linsep.py
_downloads/e8424b9e5d3eba1417fd53ebb2f51a96/: robls.py
_downloads/eacf6bceed19b2f165a702b460dc1dd2/: robsvm.py
_downloads/f4aec9154ad1cc94b4fb0c1af3b7838d/: expdesign.py
_downloads/fadd87c7fc617e6d404d6f409886d8af/: l1regls_mosek7.py
_downloads/fe6a22e85fdbc7ffac8a12488dc41669/: portfolio.py
_static/: cvxopt.css  documentation_options.js
applications/: index.html
applications/nucnrm/: index.html
applications/openoffice/: index.html
applications/svm/: index.html
doc/html/: .buildinfo  blas.html  c-api.html  coneprog.html  copyright.html  fftw.html  index.html  intro.html  lapack.html  matrices.html  modeling.html  objects.inv  printing.html  search.html  searchindex.js  solvers.html  spsolvers.html
doc/source/: blas.rst  c-api.rst  coneprog.rst  conf.py  copyright.rst  fftw.rst  index.rst  intro.rst  lapack.rst  matrices.rst  modeling.rst  printing.rst  solvers.rst  spsolvers.rst
documentation/: index.html
download/: index.html
examples/: index.html
examples/book/: README  basispursuit.html  centers.html  chernoff.html  consumerpref.html  cvxfit.html  ellipsoids.html  expdesign.html  floorplan.html  huber.html  inputdesign.html  (+13 more)
install/: index.html
src/: setup.py
tests/: 662_bus.mtx  ACTIVSg2000.mtx  bcsstk24.mtx  boeing2.mps  bp_800.mtx  test_basic.py  test_blas.py  test_custom_kkt.py  test_dsdp.py  test_examples.py  test_glpk.py  test_gsl.py  test_modeling.py  test_mosek.py  test_sdp.py  test_sparse_solvers.py
userguide/: .buildinfo  blas.html  c-api.html  coneprog.html  copyright.html  fftw.html  index.html  intro.html  lapack.html  matrices.html  modeling.html  objects.inv  printing.html  search.html  searchindex.js  solvers.html  spsolvers.html
(+506 files in other folders)
