[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/python/_version.py"

[cvxopt]
dynamic = ["version"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
before-all = "yum install -y suitesparse-devel fftw-devel glpk-devel gsl-devel"

[tool.cibuildwheel.macos]
before-all = "brew install suitesparse fftw glpk gsl"